--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("delta-co.github.io/background.jpg");
+	background-image: url("background.jpg");
 	background-size: cover;
 	font-family: Helvetica;
 	padding: 10px;
